# GETSSH

./: # GETSSH v1.md  # Release Notes: GETSSH v1.3.md  .gitignore  .npmrc  Cargo.toml  GETSSH_Force_Uninstaller.bat  GETSSH_UI_REFACTOR_ROADMAP.md  LICENSE  MOOVIER_UI_ARCHITECTURE_PROPOSAL_CN.md  PLUGIN_SDK_INTERNAL.md  README.md  README_CN.md  README_EN.md  UPDATE.md  auto_merge.py  auto_merge.sh  auto_merge_batch2.py  benchmark.js  benchmark.ts  benchmark_save_profiles.js  block-bench.js  fix_app.js  index.html  measure_plugin_manager.js  measure_plugin_manager.ts  package-lock.json  package.json  parse_prs.js  parse_test.js  pnpm-lock.yaml  pnpm-workspace.yaml  push_to_friend_repo.ps1  replace_Terminal.patch  replace_Terminal_Component_App.patch  replace_Terminal_consts.patch  replace_sessionStore.patch  rust_test.rs  tailwind.config.js  test-safestorage.js  test-sentinel.js  (+7 more)
.github/workflows/: release.yml
apps/getssh-client/: index.html  package.json  test-rust.js  test-sentinel.ts  test-sqlite.js  test-wrapper.js  tsconfig.node.json  vite.config.mts
docs/: BUGS_CN.md  BUGS_EN.md  CHANGELOG_CN.md  CHANGELOG_EN.md  PLUGIN_SDK_FUTURE_PROPOSALS_CN.md  PLUGIN_SDK_INTERNAL.md  PLUGIN_SDK_INTERNAL_CN.md  PRD_CN.md  RASP_SECURE_CENTER_SPEC.md  VULNERABILITIES_CN.md  VULNERABILITIES_EN.md  WORKSPACE_ARCHITECTURE_PROPOSAL_CN.md  WORKSPACE_ARCHITECTURE_PROPOSAL_CN_2.md
docs/legal/: PRIVACY_POLICY.md  TERMS_OF_SERVICE.md  THIRD_PARTY_LICENSES.md
electron/main/: PluginManager.test.ts  PluginManager.ts  index.ts
electron/preload/: index.ts
plugins/sdk-tester/: index.html  main.js  package.json  script.js
plugins/system-monitor/: index.html  manifest.json  package.json  script.js
release notes/: # Release Notes: GETSSH v1.2.1.md  # Release Notes: GETSSH v1.2.md  # Release Notes: GETSSH v1.3.md
rust-core/audit-stream/: Cargo.toml  index.d.ts  index.js  package.json
rust-core/audit-stream/src/: lib.rs
rust-core/getssh-kv/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
rust-core/getssh-kv/src/: lib.rs
rust-core/getssh-sentinel/: Cargo.toml  index.d.ts  index.js  package.json
rust-core/getssh-sentinel/src/: lib.rs
rust-core/getssh-sysprobe/: Cargo.toml  package-lock.json  package.json
rust-core/getssh-sysprobe/src/: lib.rs
rust-core/getssh-unarchive/: Cargo.toml  index.js  package-lock.json  package.json
rust-core/getssh-unarchive/src/: lib.rs
rust-core/getssh-vault/: Cargo.toml  package-lock.json  package.json
rust-core/getssh-vault/src/: lib.rs
rust-core/nexus-core/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
rust-core/nexus-core/src/: ffi.rs  lib.rs  network.rs  ssh.rs  state.rs  workspace.rs
rust-core/nexus-core/src/core/: broadcaster.rs  globals.rs  mod.rs
rust-core/nexus-core/src/handlers/: mod.rs  pane_ops.rs  pty_ops.rs  tab_ops.rs  workspace_ops.rs
rust-core/nexus-core/src/state/: mod.rs  pane.rs  workspace.rs
rust-core/sftp-stream/: Cargo.toml  index.js  package-lock.json  package.json
rust-core/sftp-stream/src/: lib.rs
rust-core/watchdog/: Cargo.toml
scripts/: build-native.js  package-plugin.js
sftp-mock-plugin/: main.js  package.json  renderer.js
src/: App.test.tsx  App.tsx  TerminalWindow.tsx  i18n.test.ts  i18n.ts  index.css  main.tsx  types.d.ts
src/components/: CommandCenter.tsx  ConnectForm.test.tsx  ConnectForm.tsx  CryptoModal.test.tsx  CryptoModal.tsx  EmptyState.test.tsx  EmptyState.tsx  HostKeyVerificationModal.tsx  LeafPane.tsx  PluginPane.tsx  PluginSettings.tsx  (+11 more)
(+165 files in other folders)
