[package]
name = "getssh-kv"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
rusqlite = { version = "0.31.0", features = ["bundled"] }

[build-dependencies]
napi-build = "2.0.1"
