[package]
name = "getssh-sentinel"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
regex = "1.10"
lazy_static = "1.4"
uuid = { version = "1.4", features = ["v4"] }

[build-dependencies]
napi-build = "2.0.1"
