[package]
name = "getssh-sysprobe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.17", default-features = false, features = ["napi4"] }
napi-derive = "2.16.13"
sysinfo = "0.33.1"
once_cell = "1.20.2"
lazy_static = "1.5.0"

[build-dependencies]
napi-build = "2.3.2"
