[package]
name = "getssh-unarchive"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.0", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2.16.0"
zip = { version = "2.2.0", default-features = false, features = ["deflate", "bzip2", "time"] }
tokio = { version = "1.0", features = ["fs", "rt"] }

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"
opt-level = "z"
