[package]
name = "getssh-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.17", default-features = false, features = ["napi4"] }
napi-derive = "2.16.13"
aes-gcm = "0.10.3"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
sha2 = "0.10.8"
rand = "0.8.5"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }

[build-dependencies]
napi-build = "2.3.2"
