[package]
name = "nexus-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.14", default-features = false, features = ["napi4", "async", "tokio_rt", "serde-json"] }
napi-derive = "2.16.12"
tokio = { version = "1.36", features = ["full"] }
ssh2 = { version = "0.9.4", features = ["vendored-openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }

[build-dependencies]
napi-build = "2.1.3"
